--- a/views/stats.erb
+++ b/views/stats.erb
@@ -1,1 +1,8 @@
-<%= @list %>
+<%= @res %>
+
+DELETE
+<form method="post" action="/">
+    <input type="text" name="killCmd">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="delete!!">
+</form>
