add cas command

--- a/views/stats.erb
+++ b/views/stats.erb
@@ -17,7 +17,7 @@ POST<br>
     Key:<input type="text" name="key"><br>
     exptime<input type="text" name="exptime"><br>
     bytes<input type="text" name="bytes"><br>
-    <input type="text" name="casid"><br>
+    CASid<input type="text" name="casid"><br>
     value<input type="text" name="value"><br>
     <input type="text" name="size"><br>
     <input type="text" name="digit"><br>
