add incr/decr command

--- a/views/stats.erb
+++ b/views/stats.erb
@@ -20,7 +20,7 @@ POST<br>
     CASid<input type="text" name="casid"><br>
     value<input type="text" name="value"><br>
     <input type="text" name="size"><br>
-    <input type="text" name="digit"><br>
+    digit<input type="text" name="digit"><br>
 <br>
     <input type="submit" value="Post!">
 </form>
