add set_auto_recover command

--- a/views/stats.erb
+++ b/views/stats.erb
@@ -28,7 +28,9 @@ POST<br>
 
 PUT
 <form method="post" action="/">
-    <input type="text" name="command">
+    Command:<input type="text" name="command">
+    Bool:<input type="text" name="bool">
+    second:<input type="text" name="sec">
     <input type="hidden" name="_method" value="PUT">
     <input type="submit" value="put!!">
 </form>
