add set_lost_action command

--- a/views/stats.erb
+++ b/views/stats.erb
@@ -31,6 +31,7 @@ PUT
     Command:<input type="text" name="command">
     Bool:<input type="text" name="bool">
     second:<input type="text" name="sec">
+    lost action:<input type="text" name="lost">
     <input type="hidden" name="_method" value="PUT">
     <input type="submit" value="put!!">
 </form>
