--- a/views/stats.erb
+++ b/views/stats.erb
@@ -28,10 +28,11 @@ POST<br>
 
 PUT
 <form method="post" action="/">
-    Command:<input type="text" name="command">
-    Bool:<input type="text" name="bool">
-    second:<input type="text" name="sec">
-    lost action:<input type="text" name="lost">
+    Command:<input type="text" name="command"><br>
+    Bool:<input type="text" name="bool"><br>
+    second:<input type="text" name="sec"><br>
+    lost action:<input type="text" name="lost"><br>
+    log level:<input type="text" name="level"><br>
     <input type="hidden" name="_method" value="PUT">
     <input type="submit" value="put!!">
 </form>
