try react + jquery

--- a/views/stats.erb
+++ b/views/stats.erb
@@ -1,3 +1,14 @@
+<html>
+  <head>
+    <title>Try Roma</title>
+    <script src="https://fb.me/react-0.13.3.js"></script> <!-- toDO download library-->
+    <script src="https://fb.me/JSXTransformer-0.13.3.js"></script> <!-- toDO download library-->
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>  <!-- toDO download library-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script> <!-- toDO download library-->
+  </head>
+  <body>
+
+
 debug screen
 <hr>
 
@@ -43,3 +54,83 @@ PUT
 response<br>
 <%#= h @res %>
 <%= @res %>
+
+
+<br>
+<br>
+
+<hr>
+
+    <div id="reactArea" />
+    <script type="text/jsx">
+
+
+var Test = React.createClass(
+    {
+        getInitialState() {
+            return {
+                cmd: "please input command"
+            };
+        },
+        sendCommand(e) {
+            var ENTER = 13;
+            if(e.keyCode == ENTER){
+                switch (e.target.value) {
+                    case 'stat':
+                        //$.get('http://192.168.33.81:4567/stat', function(res){
+                        $.get('../stat', function(res){
+                            alert(res); 
+                            //this.setState({cmd: res.body});
+                         }.bind(this));
+                        //request.get('localhost:4567/stat', (res) => {
+                        //    this.setState({cmd: res.body});
+                        //});
+                        //this.setState({cmd: e.target.value});
+                        break;
+                    case '':
+                        this.setState({cmd: "please input command"});
+                        break;
+                    default:
+                        this.setState({cmd: "No Support"});
+                        break;
+                }
+            }
+        },
+        render() {
+          return (
+            <div>
+              Send Command is {this.state.cmd}
+              <br /> 
+              <input type="text" placeholder={this.state.cmd} onChange={this.changeText}  onKeyDown={this.sendCommand} />
+            </div>
+          );
+        }
+    }
+);
+
+
+
+
+
+
+React.render(<Test />, document.getElementById("reactArea"));
+
+
+
+
+    </script>
+
+
+  </body>
+</html>
+
+
+
+
+
+<hr>
+
+
+
+
+
