--- a/views/stats.erb
+++ b/views/stats.erb
@@ -108,7 +108,7 @@
                               }).done(function(res){
                                    this.setState({explanation: res})
                               }.bind(this)).fail(function(){
-                                   this.setState({result: 'API Request was failed '})
+                                  this.setState({result: 'Ajax Request was failed '})
                               }.bind(this));
                               break;
 
@@ -121,8 +121,22 @@
                               }).done(function(res){
                                   this.setState({result: res})
                               }.bind(this)).fail(function(){
-                                  this.setState({result: 'API Request was failed '})
+                                  this.setState({result: 'Ajax Request was failed '})
                               }.bind(this));
+                              break;
+
+                          //case /^(set_expt)\s([a-z0-9]+)\s([0-9]+)$/.test(lastcmd) :
+                          //    $.ajax({
+                          //        url: "../",
+                          //        type: 'POST',
+                          //        data: { command: RegExp.$1, key: RegExp.$2, exptime: RegExp.$3 },
+                          //        cache: false,
+                          //    }).done(function(res){
+                          //        this.setState({result: res})
+                          //    }.bind(this)).fail(function(){
+                          //        this.setState({result: 'API Request was failed '})
+                          //    }.bind(this));
+                          //    break;
                       }
                 
                       window.sessionStorage.removeItem(['requireNext']);
@@ -162,7 +176,7 @@
                               }).done(function(res){
                                    this.setState({explanation: res})
                               }.bind(this)).fail(function(){
-                                   this.setState({result: 'API Request was failed '})
+                                  this.setState({result: 'Ajax Request was failed '})
                               }.bind(this));
                               
                               // require next line!!
@@ -179,6 +193,21 @@
                               window.sessionStorage.setItem(['requireNext'],[true]);
                               break;
 
+                          case /^(set_expt)\s([a-z0-9]+)\s([0-9]+)$/.test(e.target.value) :
+                              this.setState({explanation: 'Please input Value'}); // todoここらへん最初のメッセージに戻すメソッドとして切り出す
+
+                              $.ajax({
+                                  url: "../",
+                                  type: 'POST',
+                                  data: { command: RegExp.$1, key: RegExp.$2, exptime: RegExp.$3 },
+                                  cache: false,
+                              }).done(function(res){
+                                  this.setState({result: res})
+                              }.bind(this)).fail(function(){
+                                  this.setState({result: 'Ajax Request was failed '})
+                              }.bind(this));
+                              break;
+
 
                           // PUT =========================================================================
                           case /^(release|recover)$/.test(e.target.value) :
@@ -191,7 +220,7 @@
                               }).done(function(res){
                                   this.setState({result: res})
                               }.bind(this)).fail(function(){
-                                  this.setState({result: 'API Request was failed '})
+                                  this.setState({result: 'Ajax Request was failed '})
                               }.bind(this));
                               break;
 
@@ -205,7 +234,7 @@
                               }).done(function(res){
                                   this.setState({result: res})
                               }.bind(this)).fail(function(){
-                                  this.setState({result: 'API Request was failed '})
+                                  this.setState({result: 'Ajax Request was failed '})
                               }.bind(this));
                               break;
 
@@ -219,7 +248,7 @@
                               }).done(function(res){
                                   this.setState({result: res})
                               }.bind(this)).fail(function(){
-                                  this.setState({result: 'API Request was failed '})
+                                  this.setState({result: 'Ajax Request was failed '})
                               }.bind(this));
                               break;
 
